Ticket #1205: Revised fix for report overflow.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style-rtl.css
@@ -4503,7 +4503,6 @@ div.tabs ul.primary li a {
 }
 .report .report-content .report-media .container .oembed-content {
   *zoom: 1;
-  display: block;
 }
 .report .report-content .report-media .container .oembed-content:before, .report .report-content .report-media .container .oembed-content:after {
   display: table;
