--- a/drupal/sites/all/themes/checkdesk/assets/scss/ie8.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/ie8.scss
@@ -34,8 +34,9 @@ nav[role='navigation'] #user-menu SPAN.avatar {
 
 // stop container from collapsing
 // due to display: inline-block;
-// .report .report-content .report-media .container {
-// }
+.report .report-content .report-media .container .oembed-content {
+	display: block;
+}
 
 // clarify dropdown menu's edges 
 .dropdown-menu {
